# alexandria

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SUBMISSION.md  alexandria-release-install-public-feature.patch  conftest.py  data.json  docker-compose.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  discord-notify.yml
benchmarks/: optimization_baseline.json
benchmarks/babilong_8k/: README.md  __init__.py  cases.py  cases_test.py  prompts.py  runner.py  runner_test.py  statistics.py  statistics_test.py
benchmarks/babilong_8k/results/: 2026-07-20-sweep-index-v1.json
benchmarks/ifeval/: __init__.py  cases.py  cases_test.py  runner.py  runner_test.py
benchmarks/longbench_v2/: README.md  __init__.py  cases.py  cases_test.py
benchmarks/prompt_compression/: README.md  __init__.py  adapters.py  babilong.py  babilong_test.py  budget_runner.py  budget_runner_test.py  contracts.py  metering.py  metering_test.py  runner.py  runner_test.py  statistics.py  statistics_test.py  store.py  store_test.py  sweep-matrix-runbook.md  sweep_runner.py  sweep_runner_test.py
benchmarks/ruler_v2/: README.md  __init__.py  cases.py  cases_test.py
docs/: cli.md  contributing.md  definition-of-done.md  fidelity-probe-comparison.md  library.md  product-structure.html  release-install.md  release-plan.md  release-summary.md  spec-v2.md  spec.md  sprint-0-burnup.html  sprint-0-plan.md  sprint-0-report.md  sprint-1-burnup.html  sprint-1-plan.md  sprint-1-report.md  sprint-2-burnup.html  sprint-2-plan.md  sprint-2-report.md  sprint-3-plan.md  sprint-3-report.md  sprint-4-plan.md  sprint-4-report.md  tech-stack.md  test-plan-and-report.md  todo.md  working-agreement.md
docs/research/: TEMPLATE.md  accuracy-benchmarks.md  benchmark-humaneval.md  compression-RECOMP.md  compression-longllmlingua.md  long-context-degradation.md  long-context-length-hurts.md  long-context-lost-in-middle.md  prompt-optimization.md  prompt-techniques-2026.md  prompt-writing-techniques-2026.md  sprint1-enablerA-trial.md  sprint2-enablerA-ifeval.md  sprint2-enablerA-longbench.md  sprint2-enablerA-niah.md  sprint2-enablerA-rating.md  sprint2-enablerA-ruler.md
examples/: browser_review_sample.md  compare.json  demo.ipynb  reduce_prompt.py  reduced.txt  travel_agent_prompt.md  user_message.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_173197558babb13e_config_py.html  z_173197558babb13e_embedders_py.html  z_173197558babb13e_merger_py.html  z_173197558babb13e_tokens_py.html  z_5a53e1fca8318af8_browser_review_py.html  z_5a53e1fca8318af8_envelope_py.html  z_5a53e1fca8318af8_hunks_py.html  z_5a53e1fca8318af8_interactive_py.html  z_5a53e1fca8318af8_main_py.html  z_5a53e1fca8318af8_review_html_py.html  z_5a53e1fca8318af8_verbose_py.html  z_9699c2c0d99a6635_compare_py.html  z_9699c2c0d99a6635_diff_py.html  z_9699c2c0d99a6635_optimize_py.html  z_9699c2c0d99a6635_represent_py.html  z_9699c2c0d99a6635_score_py.html  z_9699c2c0d99a6635_select_py.html  z_9699c2c0d99a6635_target_py.html  z_ae55ceac7ad69ea7_contracts_py.html  z_ae55ceac7ad69ea7_document_py.html  z_ae55ceac7ad69ea7_registry_py.html  z_ae55ceac7ad69ea7_similarity_py.html  z_be534875c55b2aeb_pipe_py.html  z_be534875c55b2aeb_report_py.html  z_f176800ff3ef7ab2___main___py.html
notebooks/: README.md  section_embedding_clusters.ipynb  skill_corpus_section_cohesion.ipynb
notebooks/outputs/: clustering_ablation_metrics.csv  section_cohesion_metrics.csv
notebooks/outputs/skill_corpus_section_cohesion/: global_test.json  repos.csv  skills.csv
scripts/: babilong_8k_compression_bench.py  babilong_8k_compression_bench_test.py  babilong_8k_keep90_measure.py  babilong_8k_phase1.py  babilong_8k_phase1_test.py  behavioral_fidelity_probe.py  compression_fidelity_check.py  count_skill_tokens.py  download_babilong_8k_data.py  download_ifeval_data.py  download_longbench_v2_data.py  download_skill_corpus.py  fidelity_pairs.json  fidelity_pairs.py  generate_inflate_dataset.py  generate_inflate_dataset_test.py  gh_utils.py  ifeval_phase1.py  inflate_redundancy.py  inflate_redundancy_test.py  plot_babilong_retention.py  plot_babilong_retention_test.py  plot_cos_sim_budget_benchmarks.py  plot_cos_sim_budget_benchmarks_test.py  plot_prompt_compression_benchmarks.py  plot_prompt_compression_benchmarks_test.py  prompt_compression_benchmark.py  prompt_compression_benchmark_test.py  release_smoke_test.py  render_html_to_png.sh  render_review_page.py  render_token_chart.py  search_skill_repos.py  sentence_embedding_fidelity_probe.py  skill_corpus_section_cohesion.py  skill_corpus_section_cohesion_test.py  summarize_prompt_compression_benchmark.py  trial_ifeval.py  verify_embedding_negation.py
scripts/corpus/Astro-Han__karpathy-llm-wiki/: SKILL.md
scripts/corpus/DenisSergeevitch__agents-best-practices/: SKILL.md
scripts/corpus/FrancyJGLisboa__agent-skill-creator/: SKILL.md
scripts/corpus/NarratorAI-Studio__narrator-ai-cli-skill/: SKILL.md
scripts/corpus/brycewang-stanford__Auto-Empirical-Research-Skills/: SKILL.md
scripts/corpus/kangarooking__cangjie-skill/: SKILL.md
scripts/corpus/muratcankoylan__Agent-Skills-for-Context-Engineering/: SKILL.md
scripts/corpus/yetone__native-feel-skill/: SKILL.md
src/alexandria/: __init__.py  __main__.py  cli.py  cli_test.py  embedding.py  embedding_test.py  pipeline.py  pipeline_test.py  segmentation.py
src/alexandria/cli/: __init__.py  browser_review.py  browser_review_test.py  envelope.py  envelope_test.py  hunks.py  interactive.py  interactive_test.py  main.py  main_test.py  review_html.py  review_html_test.py  verbose.py  verbose_test.py
src/alexandria/core/: __init__.py  apply.py  envelope.py  (+11 more)
tests/: ai_e2e_test.py  cli_test.py  main_test.py  pipeline_e2e_test.py
tests/fixtures/: dev_infra_agents.md  travel_bot_prompt.txt
trial_results/: input_data_2x.jsonl  input_data_baseline.jsonl  responses_2x.jsonl  responses_baseline.jsonl
(+1137 files in other folders)
