[project]
name = "alexandria"
version = "0.1.0"
description = "Label-free prompt optimization library using sentence embeddings to compress prompts while preserving meaning."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT"}
authors = [
  {name = "Masamune William Ishihara", email = "mwishiha@ucsc.edu"}
]
dependencies = [
    "pydantic>=2.9",
    "numpy>=2.1",
    "tiktoken>=0.8",
    "click>=8.1",
    "sentence-transformers>=3.0",
]

[project.scripts]
alexandria = "alexandria.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "pyright>=1.1.411",
    "pytest-cov>=7.1.0",
    "import-linter>=2.7",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "--cov --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
source = ["src/alexandria"]
branch = true
relative_files = true
omit = ["*/__init__.py", "*_test.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 119
target-version = "py314"
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    # Core quality
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions

    # Exception handling
    "TRY", # tryceratops

    # Async/await
    "ASYNC", # flake8-async

    # Type checking
    "TCH", # flake8-type-checking
    "FA",  # flake8-future-annotations

    # Security
    "S", # flake8-bandit

    # Code quality
    "ARG",  # flake8-unused-arguments
    "PERF", # perflint - performance
    "RUF",  # ruff-specific rules
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SLF",  # flake8-self

    # Path operations
    "PTH", # flake8-use-pathlib
]
ignore = [
    "TRY003", # Allow long exception messages inline
    "S311",   # Allow standard pseudo-random generators (not used for security)
    "RUF001", # Allow fullwidth characters in Japanese content
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"*/*_test.py" = ["S101"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "migrations",
]

[tool.importlinter]
root_package = "alexandria"
include_external_packages = true

# Test modules are co-located as *_test.py, so they live inside the linted package.
# A test legitimately crosses layers to build real Document fixtures (it needs
# represent + the embedding shell), so each crossing test module is exempted here.
# grimp wildcards replace whole segments only, so the "_test" suffix can't be globbed.

# Layering: higher layers may import lower ones, never the reverse. Modules joined
# by "|" are independent siblings that may not import each other.
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "alexandria.cli",
    "alexandria.runtime.embedding | alexandria.runtime.pipeline",
    "alexandria.phases.represent | alexandria.phases.score | alexandria.phases.optimize | alexandria.phases.select",
    "alexandria.core",
]
ignore_imports = [
    "alexandria.phases.optimize.greedy_pairwise_test -> alexandria.**",
    "alexandria.phases.represent.represent_test -> alexandria.**",
    "alexandria.phases.score.redundancy_test -> alexandria.**",
    "alexandria.phases.score.score_test -> alexandria.**",
    "alexandria.phases.select.auto_test -> alexandria.**",
]

# Functional core, imperative shell: only the embedding shell may touch a model.
[[tool.importlinter.contracts]]
name = "Embedding backend isolated to the shell"
type = "forbidden"
source_modules = [
    "alexandria.core",
    "alexandria.phases",
    "alexandria.runtime.pipeline",
]
forbidden_modules = [
    "sentence_transformers",
]
ignore_imports = [
    "alexandria.phases.optimize.greedy_pairwise_test -> alexandria.**",
    "alexandria.phases.represent.represent_test -> alexandria.**",
    "alexandria.phases.score.redundancy_test -> alexandria.**",
    "alexandria.phases.score.score_test -> alexandria.**",
    "alexandria.phases.select.auto_test -> alexandria.**",
]
