[project]
name = "alexandria"
version = "0.1.0"
description = "Label-free prompt optimization library using text embeddings to compress prompts while preserving meaning."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT"}
authors = [
  {name = "Masamune William Ishihara", email = "mwishiha@ucsc.edu"}
]
dependencies = [
    "pydantic>=2.9",
    "numpy>=2.1",
    "tiktoken>=0.8",
    "click>=8.1",
    "openai>=2.44.0",
]

[project.scripts]
alexandria = "alexandria.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "pyright>=1.1.411",
    "pytest-cov>=7.1.0",
    "import-linter>=2.7",
    "python-dotenv>=1.0",
]
scripts = [
    "absl-py>=2.5.0",
    "immutabledict>=4.3.1",
    "langdetect>=1.0.9",
    "nltk>=3.10.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["src", "tests", "scripts", "benchmarks"]
pythonpath = [".", "scripts"]
addopts = "--cov --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
source = ["src/alexandria"]
branch = true
relative_files = true
omit = ["*/__init__.py", "*_test.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 119
target-version = "py314"
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "benchmarks/ifeval/vendor",
]

[tool.ruff.lint]
select = [
    # Core quality
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions

    # Exception handling
    "TRY", # tryceratops

    # Async/await
    "ASYNC", # flake8-async

    # Type checking
    "TCH", # flake8-type-checking
    "FA",  # flake8-future-annotations

    # Security
    "S", # flake8-bandit

    # Code quality
    "ARG",  # flake8-unused-arguments
    "PERF", # perflint - performance
    "RUF",  # ruff-specific rules
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SLF",  # flake8-self

    # Path operations
    "PTH", # flake8-use-pathlib
]
ignore = [
    "TRY003", # Allow long exception messages inline
    "S311",   # Allow standard pseudo-random generators (not used for security)
    "RUF001", # Allow fullwidth characters in Japanese content
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"*/*_test.py" = ["S101"]
# Utility scripts shell out to a fixed `gh` binary with controlled argv (shell=False)
# and fetch from a hardcoded https raw.githubusercontent.com host.
"scripts/**" = ["S603", "S310"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# pydantic introspects a computed_field's return annotation at model-build time, so its imports are
# runtime-required even though they appear only in an annotation.
runtime-evaluated-decorators = ["pydantic.computed_field"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "benchmarks"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "migrations",
    "benchmarks/ifeval/vendor",
]

[tool.importlinter]
root_package = "alexandria"
include_external_packages = true

# ir is the shared contract every layer may import. Among cli/ops/utils, imports must be
# adjacent-only (cli -> ops -> utils); the layers type cannot express that, so it only forbids
# reverse imports. The forbidden contract below closes the one gap it leaves: cli skipping over
# ops straight into utils.
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "alexandria.cli",
    "alexandria.ops",
    "alexandria.utils",
    "alexandria.ir",
]

# cli -> ops -> utils chains are legitimate, so indirect imports are allowed; only a direct
# cli -> utils import (skipping ops) is forbidden.
[[tool.importlinter.contracts]]
name = "CLI reaches utils only through ops"
type = "forbidden"
source_modules = ["alexandria.cli"]
forbidden_modules = ["alexandria.utils"]
allow_indirect_imports = true

# Features are standalone capabilities; pipe may import them to bundle the compositions worth
# chaining (reduce, score_report), never the reverse.
[[tool.importlinter.contracts]]
name = "Pipe composes features"
type = "layers"
containers = ["alexandria.ops"]
layers = ["pipe", "features"]
# target_test drives the full pipe (reduce) to exercise target merges end to end, so the co-located
# feature test legitimately imports pipe; the feature module itself never does.
ignore_imports = ["alexandria.ops.features.target_test -> alexandria.ops.pipe"]

# Test modules are co-located as *_test.py, so the "Features are independent"
# wildcard sweeps them in as sibling modules. A feature test legitimately imports
# its own feature (and sometimes sibling features) to build real Document fixtures,
# so each test module is exempted on that contract below. Adding a new feature auto-
# extends the wildcard, but its co-located _test.py must be added to ignore_imports
# by hand — grimp wildcards replace whole segments, so the "_test" suffix can't be globbed.

# Each feature is a standalone capability and may not import a sibling; inter-feature types live in
# ir.contracts.
[[tool.importlinter.contracts]]
name = "Features are independent"
type = "independence"
modules = ["alexandria.ops.features.*"]
ignore_imports = [
    "alexandria.ops.features.compare_test -> alexandria.**",
    "alexandria.ops.features.diff_test -> alexandria.**",
    "alexandria.ops.features.optimize_test -> alexandria.**",
    "alexandria.ops.features.represent_test -> alexandria.**",
    "alexandria.ops.features.score_test -> alexandria.**",
    "alexandria.ops.features.select_test -> alexandria.**",
    "alexandria.ops.features.target_test -> alexandria.**",
]

# Functional core, imperative shell: only the utils shell may construct OpenAI clients.
[[tool.importlinter.contracts]]
name = "OpenAI client isolated to the shell"
type = "forbidden"
source_modules = [
    "alexandria.ir",
    "alexandria.ops",
    "alexandria.cli",
]
forbidden_modules = [
    "openai",
]
allow_indirect_imports = true
